--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://holmeslin.github.io"
+baseurl = "https://holmeslin.github.io"
 languageCode = "en-us"
 title = "Feng-Chi's Blog"
 # Enable comments by entering your Disqus shortname
