--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/hugo-icarus"]
 	path = themes/hugo-icarus
 	url = https://gitlab.com/toryanderson/hugo-icarus.git
+[submodule "themes/even"]
+	path = themes/even
+	url = https://github.com/olOwOlo/hugo-theme-even
