--- a/config.toml
+++ b/config.toml
@@ -185,7 +185,7 @@ copyright = ""            # default: author.name ↓        # 默认为下面配
     d-facebook = "https://facebook.com/fengchilin"
     e-linkedin = "https://www.linkedin.com/in/holmeslin/"
     f-google = ""
-    g-github = "httsp://github.com/holmeslin"
+    g-github = "https://github.com/holmeslin"
     h-weibo = ""
     i-zhihu = ""
     j-douban = ""
